# synthesis

./: .editorconfig  .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  Setup.hs  cabal.project  cabal2nix.nix  default.nix  doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  (+30 more)
Cabal-2.4.0.1/: Cabal.haddock  Cabal.txt  Distribution-Backpack-ComponentsGraph.html  Distribution-Backpack-Configure.html  Distribution-Backpack-ConfiguredComponent.html  Distribution-Backpack-DescribeUnitId.html  Distribution-Backpack-FullUnitId.html  Distribution-Backpack-LinkedComponent.html  Distribution-Backpack-ModSubst.html  Distribution-Backpack-ModuleShape.html  Distribution-Backpack-PreModuleShape.html  Distribution-Backpack.html  Distribution-CabalSpecVersion.html  Distribution-Compat-Binary.html  Distribution-Compat-CharParsing.html  Distribution-Compat-CreatePipe.html  Distribution-Compat-DList.html  Distribution-Compat-Directory.html  Distribution-Compat-Exception.html  Distribution-Compat-Graph.html  Distribution-Compat-Lens.html  Distribution-Compat-Newtype.html  Distribution-Compat-Parsing.html  Distribution-Compat-ReadP.html  Distribution-Compat-Semigroup.html  Distribution-Compat-Stack.html  Distribution-Compat-Time.html  Distribution-Compiler.html  Distribution-FieldGrammar-Class.html  Distribution-FieldGrammar-FieldDescrs.html  Distribution-FieldGrammar-Parsec.html  Distribution-FieldGrammar-Pretty.html  Distribution-FieldGrammar.html  Distribution-InstalledPackageInfo.html  Distribution-License.html  Distribution-Make.html  Distribution-ModuleName.html  Distribution-Package.html  Distribution-PackageDescription-Check.html  Distribution-PackageDescription-Configuration.html  (+204 more)
Cabal-2.4.1.0/: Cabal.haddock  Cabal.txt  Distribution-Backpack-ComponentsGraph.html  Distribution-Backpack-Configure.html  Distribution-Backpack-ConfiguredComponent.html  Distribution-Backpack-DescribeUnitId.html  Distribution-Backpack-FullUnitId.html  Distribution-Backpack-LinkedComponent.html  Distribution-Backpack-ModSubst.html  Distribution-Backpack-ModuleShape.html  Distribution-Backpack-PreModuleShape.html  Distribution-Backpack.html  Distribution-CabalSpecVersion.html  Distribution-Compat-Binary.html  Distribution-Compat-CharParsing.html  Distribution-Compat-CreatePipe.html  Distribution-Compat-DList.html  Distribution-Compat-Directory.html  Distribution-Compat-Exception.html  Distribution-Compat-Graph.html  Distribution-Compat-Lens.html  Distribution-Compat-Newtype.html  (+222 more)
benchmark/: Main.hs
(+3832 files in other folders)
