cabal-version:       2.2
name:                synthesis
version:             0.0.0
synopsis:            typed neural program synthesis
description:         code-base for my UvA MSc AI thesis on typed neural program synthesis
homepage:            https://github.com/tycho01/synthesis#readme
license:             MIT
author:              Kiara Grouwstra
maintainer:          Kiara Grouwstra
copyright:           2020 Kiara Grouwstra
category:            Machine Learning
build-type:          Simple

common config
  default-language:    Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
  default-extensions:  LambdaCase
                     , ScopedTypeVariables
                     , UnicodeSyntax
                     , RankNTypes
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
                     , haskell-src-exts
                     , hint
                     , containers
                     , unordered-containers
                     , ghc-lib-parser
                     , random

library
  import:              config
  hs-source-dirs:      library
  build-depends:       hashable
                     , hslogger
                     , bytestring
                     , prettyprinter
                     , store
                     , optparse-applicative
  exposed-modules:     Synthesis.Ast
                     , Synthesis.Blocks
                     , Synthesis.Configs
                     , Synthesis.Data
                     , Synthesis.FindHoles
                     , Synthesis.Generation
                     , Synthesis.Generator
                     , Synthesis.Hint
                     , Synthesis.Orphanage
                     , Synthesis.Synthesizer
                     , Synthesis.TypeGen
                     , Synthesis.Types
                     , Synthesis.Utility

executable generator
  import:              config
  hs-source-dirs:      generator
  main-is:             Main.hs
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:       synthesis

executable synthesizer
  import:              config
  hs-source-dirs:      synthesizer
  main-is:             Main.hs
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:       synthesis
                     , criterion

test-suite synthesis-test-suite
  import:              config
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ImageSpec
  build-depends:       synthesis
                     , tasty
                     , tasty-hspec
                     , HUnit
                     , tasty-hunit
